# ESP-NOW-MeshCore

./: .clangd  .gitignore  CMakeLists.txt  README.md  scratch_cmd.py  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/actuators/: actuators.c
components/actuators/include/: actuators.h
components/blink_led/: CMakeLists.txt  blink_led.c
components/blink_led/include/: blink_led.h
components/device_reset/: CMakeLists.txt  device_reset.c
components/device_reset/include/: device_reset.h
components/espnow_control/: CMakeLists.txt  espnow_control.c
components/espnow_control/include/: espnow_control.h
components/mesh_manager/: CMakeLists.txt  mesh_manager.c
components/mesh_manager/include/: mesh_manager.h
components/message_processor/: CMakeLists.txt  message_processor.c
components/message_processor/include/: message_processor.h
components/message_provider/: CMakeLists.txt  message_provider.c
components/message_provider/include/: message_provider.h
components/security_manager/: security_manager.c
components/security_manager/include/: security_manager.h
components/sensors/: sensors.c
components/sensors/include/: sensors.h
components/shared_config/include/: mesh_types.h  shared_config.h
components/status_indicator/: status_indicator.c
components/status_indicator/include/: status_indicator.h
main/: CMakeLists.txt  main.c
